tests/ui/parser/escaped_import.sol
import "\?"; //~ ERROR unknown character escape
